--- a/EmployableApp/Views/Addresses/Index.cshtml
+++ b/EmployableApp/Views/Addresses/Index.cshtml
@@ -6,58 +6,124 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.HouseNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AptNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Street)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.State)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.HouseNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AptNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Street)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ZipCode)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Address_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Address_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Address_id })
-        </td>
-    </tr>
-}
+<head>
+    <style>
+        #map {
+            width: 100%;
+            height: 400px;
+        }
+    </style>
+</head>
+<body>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            var mapDiv = document.getElementById('map');
+            var map = new google.maps.Map(mapDiv, {
+                center: {lat: 43.137174, lng: -88.092327},
+                zoom: 9
+            });
+            @foreach (var item in Model.programmed) {
+       <text>
+            var marker = new google.maps.Marker({
+                position: { lat: @item.lat , lng: @item.lng},
+                map: map,
+                title: 'Hello'
+            });</text> }
+            var lineCoordinates = [];
+            @foreach(var item in Model.programmed)
+             {
+                <text>
 
-</table>
+            coordinates_array = new google.maps.LatLng(@item.lat, @item.lng);
+            lineCoordinates.push(coordinates_array);
+            </text>
+             };
+
+            var path = new google.maps.MVCArray();
+
+            var service = new google.maps.DirectionsService();
+
+            var poly = new google.maps.Polyline({ map: map, strokeColor: '#4986E7' });
+
+            for (var i = 0; i < lineCoordinates.length; i++) {
+                if ((i + 1) < lineCoordinates.length) {
+                    var src =  lineCoordinates[i];
+                    var des = lineCoordinates[i + 1];
+                    path.push(src);
+                    poly.setPath(path);
+                    service.route({
+                        origin: src,
+                        destination: des,
+                        travelMode: google.maps.DirectionsTravelMode.DRIVING
+                    }, function (result, status) {
+                        if (status == google.maps.DirectionsStatus.OK) {
+                            for (var i = 0, len = result.routes[0].overview_path.length; i < len; i++) {
+                                path.push(result.routes[0].overview_path[i]);
+                            }
+                        }
+                    });
+                }}}
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3KoWWl0oYiaKZJBpRBR2lg8_LNH5FuNw&callback=initMap">
+    </script>
+
+
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.HouseNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AptNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Street)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.State)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ZipCode)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AptNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Street)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.State)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ZipCode)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Address_id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Address_id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Address_id })
+                </td>
+            </tr>
+        }
+
+    </table>
