--- a/EmployableApp/Views/Account/Register.cshtml
+++ b/EmployableApp/Views/Account/Register.cshtml
@@ -36,6 +36,12 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Street, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Street, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
