updated search.js to pass lat and long to a function

--- a/EmployableApp/Views/Jobs/Search.cshtml
+++ b/EmployableApp/Views/Jobs/Search.cshtml
@@ -39,7 +39,7 @@
 
         <div id="result">
         </div>
-        <div id="save">
+        <div id="save" style="display: ">
             <button onclick="saveJob()"> Save Checked Jobs</button>
         </div>
         <h3 id="display-message" style="text-align: center"></h3>
