updated resumes model, deleted and readded controller and view

--- a/EmployableApp/Views/Resumes/Details.cshtml
+++ b/EmployableApp/Views/Resumes/Details.cshtml
@@ -19,19 +19,51 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Experience)
+            @Html.DisplayNameFor(model => model.JobExperienceOne)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Experience)
+            @Html.DisplayFor(model => model.JobExperienceOne)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Education)
+            @Html.DisplayNameFor(model => model.JobExperienceTwo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Education)
+            @Html.DisplayFor(model => model.JobExperienceTwo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.JobExperienceThree)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.JobExperienceThree)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.HighSchool)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.HighSchool)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.College)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.College)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OtherSchooling)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OtherSchooling)
         </dd>
 
         <dt>
@@ -43,11 +75,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.References)
+            @Html.DisplayNameFor(model => model.ReferenceOne)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.References)
+            @Html.DisplayFor(model => model.ReferenceOne)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReferenceTwo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReferenceTwo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReferenceThree)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReferenceThree)
         </dd>
 
     </dl>
