--- a/EmployableApp/Views/Jobs/DisplayCity.cshtml
+++ b/EmployableApp/Views/Jobs/DisplayCity.cshtml
@@ -6,5 +6,24 @@
 
 <h2>DisplayCity</h2>
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
 
+
+
+
+
+
+
+
+
+
+@section Scripts {
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="~/scripts/pagination.js"></script>
+    <script type="text/javascript" src="~/scripts/search.js"></script>
+
+}
+}
