events controller, views with fullcalendar functionality.

--- a/EmployableApp/Views/Events/Details.cshtml
+++ b/EmployableApp/Views/Events/Details.cshtml
@@ -19,32 +19,32 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.start)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.start)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Editable)
+            @Html.DisplayNameFor(model => model.editable)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Editable)
+            @Html.DisplayFor(model => model.editable)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
