--- a/EmployableApp/Views/Events/Index.cshtml
+++ b/EmployableApp/Views/Events/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model IEnumerable<EmployableApp.Models.Event>
+<script src="~/Scripts/jquery.min.js" type="text/javascript"></script>
+<script src="~/Scripts/moment.min.js" type="text/javascript"></script>
+<script src="~/Scripts/fullcalendar.js" type="text/javascript"></script>
+<link rel='stylesheet' href='~/Content/fullcalendar.min.css' />
 
 @{
     ViewBag.Title = "Index";
@@ -15,13 +19,13 @@
             @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.start)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Editable)
+            @Html.DisplayNameFor(model => model.editable)
         </th>
         <th></th>
     </tr>
@@ -32,20 +36,177 @@
             @Html.DisplayFor(modelItem => item.ApplicationUser.FirstName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
+            @Html.DisplayFor(modelItem => item.start)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Title)
+            @Html.DisplayFor(modelItem => item.title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Editable)
+            @Html.DisplayFor(modelItem => item.editable)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
 
+    
 </table>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="calendar"></div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<script type="text/javascript">
+
+
+    $(document).ready(function() {
+
+    // page is now ready, initialize the calendar...
+
+        $('#calendar').fullCalendar({
+        // put your options and callbacks here
+            weekends: true,
+            height: 500,
+            editable: true,
+            cache: true,
+            allDay: false,
+            displayEventTime: false,
+            events: 'GetCalendarEvents',
+
+            eventDrop: function(event,revertFunc) {
+                if (confirm("Do you want to save this event?")) {
+                    //save changes to event in database****
+                    EditEvent(event);
+                }
+                else {
+                    revertFunc();
+                }
+            },
+
+            dayClick: function(date, allDay, jsEvent, view) {
+                var description = prompt('Enter a description:');
+                if (description) {
+                    var data = {title: description, start: date, end:date, editable: true, allDay: false, }
+                    $('#calendar').fullCalendar('renderEvent', { title: description, start: date, }, true);
+                    CreateEvent(data);
+                }
+            },
+
+            eventClick: function(calEvent, jsEvent, view) {
+                var action = prompt('Would you like to delete this event?', calEvent.title, {buttons: {OK: true, Cancel: false} });
+
+                if (action) {
+                    $('#calendar').fullCalendar('removeEvents', calEvent._id);
+                    //remove event in database******
+                    DeleteEvent(calEvent.Id);
+
+
+                }
+
+                // if (name) {
+                //   calEvent.title = name;
+                //   $('#calendar').fullCalendar('updateEvent',calEvent);
+                //   //save event in database*****
+                // }
+            },
+            eventConstraint: {
+                start: moment().subtract(1, 'week').format('MM-DD-YYYY'),
+                end: '2050-05-05'
+            }
+        });
+
+    });
+
+    function EditEvent(drag, event, dayDelta, minuteDelta, allDay, revertFunc) {
+
+        $.ajax({
+            url: 'Edit/',
+            type: "POST",
+            dataType: "json",
+            data: ({
+                __RequestVerificationToken: $('[name= "__RequestVerificationToken"]').val(),
+                Id: drag.Id,
+                title: drag.title,
+                start: drag.start.format('MM-DD-YYYY'),
+                end: drag.start.format('MM-DD-YYYY'),
+                allday: drag.allDay,
+                editable: drag.editable
+            }),
+            success: function (data, textStatus) {
+                if (!data) {
+                    //revertFunc();
+                    return;
+                }
+                calendar.fullCalendar('updateEvent', event);
+            },
+            error: function () {
+            //    revertFunc();
+            }
+        });
+    };
+
+    function DeleteEvent(Id) {
+        $.ajax({
+            url: 'Delete/'+Id,
+            type: "POST",
+            dataType: "json",
+            data: ({
+                __RequestVerificationToken: $('[name= "__RequestVerificationToken"]').val()
+            }),
+
+            success: function (data, textStatus) {
+                if (!data) {
+                    //revertFunc();
+                    return;
+                }
+                //calendar.fullCalendar('updateEvent', event);
+                //calendar.fullCalendar( 'refetchEvents' )
+            },
+            error: function () {
+                //    revertFunc();
+            }
+        });
+    };
+
+    function CreateEvent(event) {
+
+        $.ajax({
+
+            url: 'Create',
+            type: "POST",
+            dataType: "json",
+            data: ({
+                __RequestVerificationToken: $('[name= "__RequestVerificationToken"]').val(),
+                title: event.title,
+                start: event.start.format('MM-DD-YYYY'),
+                end: event.start.format('MM-DD-YYYY'),
+                allday: event.allDay,
+                editable: event.editable
+            }),
+
+            success: function (data, textStatus) {
+                if (!data) {
+                    //revertFunc();
+                    return;
+                }
+                calendar.fullCalendar('updateEvent', event);
+            },
+            error: function () {
+                //    revertFunc();
+            }
+        });
+    };
+</script>
+
+
