worked on displaying city - not complete

--- a/EmployableApp/Views/Jobs/Details.cshtml
+++ b/EmployableApp/Views/Jobs/Details.cshtml
@@ -1,12 +1,11 @@
-﻿@model EmployableApp.Models.Job
-
+﻿@model EmployableApp.Models.IndexViewModel
 @{
     ViewBag.Title = "Details";
 }
 
 <h2>Details</h2>
 
-<div>
+@*<div>
     <h4>Job</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -79,4 +78,4 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.JobId }) |
     @Html.ActionLink("Back to List", "Index")
-</p>
+</p>*@
