--- a/EmployableApp/Views/Jobs/DisplayCity.cshtml
+++ b/EmployableApp/Views/Jobs/DisplayCity.cshtml
@@ -9,21 +9,19 @@
 
    
 
-    @*<div id="cityName"></div>*@
+   
+
+           <div id="cityName"></div>
 
 
-    @*onload="goToCity(@Model.Latitude, @Model.Longitude)"*@
 
 
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-
-@*@section Scripts {
+@section Scripts {
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="~/scripts/pagination.js"></script>
-    <script type="text/javascript" src="~/scripts/search.js"></script>
+    <script type="text/javascript" src="~/scripts/search.js">
+        goToCity(@Model.Latitude, @Model.Longitude);
+    </script>
 
-}*@
+}
