--- a/EmployableApp/Views/Home/Index.cshtml
+++ b/EmployableApp/Views/Home/Index.cshtml
@@ -3,29 +3,22 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+        <h1>.employable</h1>
+        @*<p class="btn btn-primary btn-lg">@Html.ActionLink("Learn More", "Index", "Home") &raquo; </p>*@
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+                <div class="row" style="height:400px;">
+                    <div class="image-wrap">
+
+                    <a href="~/Jobs/Search"><img src="http://ww2.kqed.org/pop/wp-content/uploads/sites/12/2013/03/HireMe.jpeg" style="float: left; width: 32%; height:400px; margin-right: 1%; margin-bottom: 0.5em; "></a>
+                        <p class="image-title">Job Search</p>
+                    </div>
+                        <a href="~/Resumes/Create"><img src="http://www.oknation.net/blog/home/user_data/file_data/201406/07/1144740.jpg" style="float: left; height:400px; width: 32%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+                    <a href="~/Events/Index"><img src="http://alzheimersismylife.com/wp-content/uploads/2014/11/minimalist-simple-calendar1-676x450.jpg" style="float: left; height:400px; width: 32%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+                    <p style="clear: both;">
+                </div>
+
+<p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+
